feat: SME ERP hardening - accounting, CRM, e-invoice, reconciliation, TOTP 2FA, notifications, and UX overhaul
New modules:
- General ledger (chart of accounts, journal entries, trial balance, general ledger report) + V27
- CRM opportunity tracking (lead pipeline, value, close date) + V27
- Bank reconciliation (CSV/Excel statement import, auto+manual invoice matching) + V28
- KDV declaration (1-2/19-20 tables, payable/carryover) and BA/BS forms
- Critical stock / reorder suggestions with supplier info
- E-invoice management UI (UBL-TR 2.1, GIB send endpoint, XML download)
- Account settings page (profile, password, 2FA, theme)

Compliance & payments:
- Real TOTP 2FA (RFC 6238), 2-step login flow, enable/disable + V29 columns
- Send invoice PDF by email; scheduled overdue payment reminders; order/invoice email notifications
- Wire critical stock alerts (WebSocket + email) into invoice/stock flows

Notifications & events:
- Trigger WebSocket notifications on stock, invoice, order, collection/payment events
- First-visit tip balloons, keyboard shortcuts guide ('?'), row action menu, undo-on-delete toast, persistent table page size

Fixes (from full project audit):
- 2FA columns + /giris-2fa permitAll; DovizKuru schema aligned to finans + efektif columns
- Kullanicilar page, Iade/StokSayim status endpoints, Hareketler dropdown binding
- Ctrl+K double-listener, missing Checkbox/SelectButton registration, pi-star-fav icon
- token-less raw axios calls -> apiClient; first-run admin initializer

Security & infra:
- Strong JWT default + min 256-bit check + env warning; removed @CrossOrigin hardcode from 46 controllers
- Login rate limit covers /api/v1 + giris-2fa, resets on success, map cleanup
- GlobalExceptionHandler: upload/method/media-type/path-var/constraint handlers
- nginx: WebSocket proxy + CSP ws/wss + microphone permission; origin-based WS URL + vite /ws proxy
- Removed dead stubs (OCR/OpenBanking/Pazaryeri/WhatsApp, AsyncService/Rapor, RabbitMQ config)
- PWA: 192/